css/form.css
/* ... */
.has-warning .field-signature canvas {
  border-color: #8a6d3b !important;
}

.has-error .field-signature canvas {
  border-color: #a94442 !important;
}

.signature-preview {
  display: flex;
  flex-direction: column;
}

[data-widget-package="com.fliplet.form-builder"]
  [_type="flSignature"]
  .signature-editor.readonly
  .field-signature
  canvas {
  background-color: transparent;
  border-radius: 0%;
  border: none !important;
}

.signature-editor.readonly .field-signature {
  border-bottom: 1px solid #e5e5e5;
}

/* WYSIWYG FIELD */

.form-group .mce-tinymce {
  border: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  border-width: 1px !important;
}

.form-group .mce-tinymce > .mce-container-body.mce-stack-layout {
  border: 1px solid #ccc;
  border-radius: 4px;
  overflow: hidden;
  -webkit-box-shadow: none;
  box-shadow: none;
}

.form-group .mce-top-part::before {
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  border-bottom: 1px solid #ccc;
}

.form-group .mce-ico {
  color: #666;
}

.form-group.has-success .mce-tinymce {
  border-color: #3c763d;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-success .mce-top-part::before {
  border-color: #3c763d;
}

.form-group.has-success
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #3c763d;
}

.form-group.has-warning .mce-tinymce {
  border-color: #8a6d3b;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-warning .mce-top-part::before {
  border-color: #8a6d3b;
}

.form-group.has-warning
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #8a6d3b;
}

.form-group.has-error .mce-tinymce {
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
}

.form-group.has-error
  .tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border-color: #a94442;
}

.form-group.has-error .mce-top-part::before {
  border-color: #a94442;
}

.form-group div.mce-edit-area {
  background: #f8f8f8;
  border: 1px solid #e5e5e5;
  border-radius: 5px;
}

.tinymce-mobile-outer-container .tinymce-mobile-disabled-mask {
  opacity: 0;
}

.tinymce-mobile-outer-container .tinymce-mobile-disabled-mask .tinymce-mobile-content-container,
.tinymce-mobile-outer-container
  .tinymce-mobile-disabled-mask
  .tinymce-mobile-content-container
  .tinymce-mobile-content-tap-section {
  width: 100%;
  height: 100%;
}

.tinymce-mobile-outer-container:not(.tinymce-mobile-fullscreen-maximized)
  .tinymce-mobile-editor-socket {
  border: 1px solid #ccc;
  border-radius: 4px;
}

/* DATE AND TIME PICKER */

.form-group.fl-time-picker.readonly > .fa:first-child,
.form-group.fl-date-picker.readonly > .fa:first-child {
  color: #e1e1e1;
}

.fl-timer {
  display: flex;
  column-gap: 8px;
}

.form-group.fl-timer .btn {
  margin-bottom: 0;
}

.form-group.fl-date-range .form-group,
.form-group.fl-time-range .form-group {
  margin-bottom: 0;
}

/* SLIDER FIELD */

[data-widget-package="com.fliplet.form-builder"] .form-group.fl-range-slider .range-slider {
  background-color: #eeeeee;
}

[data-widget-package="com.fliplet.form-builder"] .form-group.fl-range-slider .range-slider-fill {
  background-color: #ed9119;
}

[data-widget-package="com.fliplet.form-builder"] .form-group.fl-range-slider .range-slider-handle,
[data-widget-package="com.fliplet.form-builder"]
  .form-group.fl-range-slider
  .range-slider-handle-value {
  background-color: #00abd1;
}

[data-widget-package="com.fliplet.form-builder"]
  .form-group.fl-range-slider
  .range-slider-handle-value:before {
  border-top-color: #00abd1;
}

[data-widget-package="com.fliplet.form-builder"]
  .form-group.fl-range-slider
  .range-slider-handle-value {
  color: #ffffff;
}

[data-widget-package="com.fliplet.form-builder"]
  .form-group.fl-range-slider
  .range-slider.range-slider-active
  .range-slider-handle {
  box-shadow: 0px 0px 0px 2px rgb(0 171 209 / 25%);
}

[data-widget-package="com.fliplet.form-builder"] .form-group.fl-range-slider > input {
  width: 100% !important;
}

.form-group.fl-date-picker > .form-control,
.form-group.fl-time-picker > .form-control {
  padding-right: 0 !important;
}
/* LINE BREAK */

form hr {
  border-top: 2px solid #dddddd;
}

/* @MEDIA */

@media screen and (min-width: 640px) {
  .btn-link,
  .btn-primary,
  .btn-secondary {
    clear: none;
    display: table-cell !important;
    width: auto;
    max-width: 100%;
  }

  .form-group.fileUpload .btn-primary {
    display: flex;
  }

  .form-html .btn {
    margin-bottom: 0;
  }

  .form-html .btn + .btn {
    margin-right: 15px;
  }

  .fileUpload .canvas-holder canvas {
    width: 100%;
    height: 130px;
  }

  .fileUpload .fa:not(.fa-file) {
    display: inline-block;
    width: auto;
    right: 0px;
  }
}

.form-group .mce-btn-group {
  float: none;
}

/* TinyMCE source code area */

.mce-window[aria-label="Source code"] textarea {
  font-family: monospace;
}

.fade-enter-active {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
}

.fade-leave-active {
  opacity: 1;
}

.fade-enter,
.fade-leave-active {
  opacity: 0;
}

.callout {
  padding: 10px;
  margin: 20px 0;
  border: 1px solid #f2f6f7;
  border-left-width: 5px;
  border-radius: 4px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
}

.callout-danger {
  border-color: #e03629;
}

.callout p:last-child {
  margin-bottom: 0;
}

/* Loading */
.loading-message {
  display: block;
  padding-top: 25%;
}

.sending-form {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 5;
  display: flex;
  align-items: center;
  justify-content: center;
  pointer-events: none;
}
/* ... */

